[package]
name = "lsd"
version = "0.1.0"
edition = "2024"

# The generated code depends on lalrpop-util.
[dependencies]
regex = "1.11.1"
lalrpop-util = "0.22.1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
# lalrpop = "0.22.1"
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
lalrpop = { version = "0.22.1", default-features = false }
